--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AdaptivePredicates"
 uuid = "35492f91-a3bd-45ad-95db-fcad7dcfedb7"
-authors = ["Valentin Churavy <v.churavy@gmail.com>"]
-version = "0.1.0"
+authors = ["Valentin Churavy <v.churavy@gmail.com> and Daniel VandenHeuvel <danj.vandenheuvel@gmail.com"]
+version = "1.0.0"
 
 [compat]
 julia = "1.8"
