--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+AdaptivePredicates = "35492f91-a3bd-45ad-95db-fcad7dcfedb7"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ExactPredicates = "429591f6-91af-11e9-00e2-59fbe8cec110"
 Supposition = "5a0628fe-1738-4658-9b6d-0b7605a9755b"
