--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,9 @@
 [deps]
+AdaptivePredicates = "35492f91-a3bd-45ad-95db-fcad7dcfedb7"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+DelaunayTriangulation = "927a84f5-c5f4-47a5-9785-b46e178433df"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ExactPredicates = "429591f6-91af-11e9-00e2-59fbe8cec110"
 Supposition = "5a0628fe-1738-4658-9b6d-0b7605a9755b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
